Added some elastic search stuff

--- a/Servant-Play.cabal
+++ b/Servant-Play.cabal
@@ -35,6 +35,9 @@ library
                      , blaze-html
                      , aeson-compat
                      , lucid
+                     , bloodhound
+                     , http-client
+                     , http-types
                      
   default-language:    Haskell2010
 
@@ -62,6 +65,9 @@ executable Servant-Play-exe
                      , blaze-html
                      , aeson-compat
                      , lucid
+                     , bloodhound
+                     , http-client
+                     , http-types
                      
   default-language:    Haskell2010
 
