--- a/Servant-Play.cabal
+++ b/Servant-Play.cabal
@@ -38,6 +38,8 @@ library
                      , bloodhound
                      , http-client
                      , http-types
+                     , HTTP
+                     , random
                      
   default-language:    Haskell2010
 
@@ -68,6 +70,8 @@ executable Servant-Play-exe
                      , bloodhound
                      , http-client
                      , http-types
+                     , HTTP
+                     , random
                      
   default-language:    Haskell2010
 
