--- a/Servant-Play.cabal
+++ b/Servant-Play.cabal
@@ -40,6 +40,7 @@ library
                      , http-types
                      , HTTP
                      , random
+                     , wreq
                      
   default-language:    Haskell2010
 
@@ -72,6 +73,7 @@ executable Servant-Play-exe
                      , http-types
                      , HTTP
                      , random
+                     , wreq
                      
   default-language:    Haskell2010
 
